# nlpaug

./: .codacy.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGE.md  CITED.md  LICENSE  MANIFEST.in  Makefile  README.md  SOURCE.md  conda.sh  meta.yaml  pypi.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  script.txt  setup.py  unittest.sh
.github/: FUNDING.yml
.github/workflows/: python312.yml
docs/: Makefile  conf.py  environment.yml  index.rst  make.bat
docs/augmenter/: augmenter.rst
docs/example/: example.rst
docs/flow/: flow.rst  sequential.rst  sometimes.rst
docs/overview/: overview.rst
docs/util/: download.rst  util.rst
example/: audio_augmenter.ipynb  change_log.ipynb  custom_augmenter.ipynb  flow.ipynb  lambada-train_model.ipynb  overview.ipynb  quick_example.ipynb  spectrogram_augmenter.ipynb  textual_augmenter.ipynb  textual_language_augmenter.ipynb  tfidf-train_model.ipynb
model/: spelling_en.txt
nlpaug/: __init__.py  base_augmenter.py  run_single_test.py
nlpaug/augmenter/: augment.py
nlpaug/flow/: __init__.py  pipeline.py  sequential.py  sometimes.py
nlpaug/model/: __init__.py  base_model.py
nlpaug/util/: __init__.py  action.py  lib_ver.py  method.py  model_cache.py  operation.py  part_of_speech.py
scripts/: coverage_uv.sh  run_lambada.py  setup_uv.sh  test_uv.sh  train_lambada.sh
source/: conf.py  environment.yml  index.rst  requirements_docs.txt
test/: conftest.py  profiler.py  run_profile_context_word_embs.sh  run_profile_import.sh  run_test.py  test_model_backed_offline.py
(+266 files in other folders)
